--- a/filters/news/templates/news/news_list.html
+++ b/filters/news/templates/news/news_list.html
@@ -17,6 +17,7 @@
             <th>Title</th>
             <th>Category</th>
             <th>Author</th>
+            <th>Date</th>
         </tr>
         </thead>
         {% for new in filter.qs %}
