--- a/filters/news/templates/news/default.html
+++ b/filters/news/templates/news/default.html
@@ -19,6 +19,10 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
+        <a class="navbar-brand" href="/sign/logout/">Logout</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
     </div>
 </nav>
 <!-- Page content-->
@@ -32,7 +36,7 @@
             </h1>
         </center>
         <h4>Up-to-the-minute news, breaking news, video, audio and feature stories.</h4>
-        <h4><p class="Main link">Go to<a class="nav-link" href="{{ 'https://www.bbc.com/news' }}">News.com</a>
+        <h4><p class="Main link"><a class="nav-link" ></a>
         </p>
         </h4>
         <center>
