--- a/filters/sign/templates/sign/main.html
+++ b/filters/sign/templates/sign/main.html
@@ -1,12 +1,14 @@
 <html>
+<center>
     <head>
         <title>SignUp/SignIn</title>
     </head>
     <body>
-        <div>
-            <h1><a href="/">SignUp/SignIn</a></h1>
-        </div>
-        {% block content %}
-        {% endblock %}
+    <div>
+        <h2><a href="/accounts/login/">SignUp/SignIn</a></h2>
+    </div>
+    {% block content %}
+    {% endblock content %}
     </body>
+</center>
 </html>
