--- a/filters/sign/templates/sign/logout.html
+++ b/filters/sign/templates/sign/logout.html
@@ -1,5 +1,7 @@
 {% extends "sign/main.html" %}
 
 {% block content %}
-<h2> Вы вышли из системы </h2>
+<center>
+    <h2> Вы вышли из системы </h2>
+</center>
 {% endblock %}
